# cpp_levelup_homeworks

./: README.md
common/include/: common.h  handlers.h
common/src/: handlers.cpp
homework_0/: README.md  solution.cpp
homework_3/: CMakeLists.txt  README.md
homework_3/include/: client.h  common.h  handlers.h  message_queue.h  report_handler.h  report_manager.h
homework_3/src/: main.cpp
homework_3/src/client/: client.cpp  handlers.cpp
homework_3/src/message_queue/: message_queue.cpp
homework_3/src/report_manager/: message_queue.cpp
homework_4/: CMakeLists.txt
homework_4/include/: task.h  task_functions.h  thread_pool.h
homework_4/src/client/: task_functions.cpp
homework_4/src/task/: task.cpp
homework_4/src/thread_pool/: thread_pool.cpp
message_queue/: CMakeLists.txt  README.md
message_queue/include/: client.h  message_queue.h  report_handler.h
message_queue/src/: main.cpp
message_queue/src/client/: client.cpp
message_queue/src/report_manager/: message_queue.cpp  report_manager.cpp
reverse_dev/: README.md
reverse_dev/dev/: .Module.symvers.cmd  .modules.order.cmd  .reverse.ko.cmd  .reverse.mod.cmd  .reverse.mod.o.cmd  .reverse.o.cmd  Makefile  modules.order  reverse.c  reverse.ko  reverse.mod  reverse.mod.c
reverse_dev/dev_usage_example/: main.c  reverse_string
task_automatation/: CMakeLists.txt  README.md
task_automatation/include/: task.h  task_manager.h  tests.h
task_automatation/src/: main.cpp
task_automatation/src/task_manager/: task.cpp  task_manager.cpp
task_automatation/src/tests/: tests.cpp
thread_pool/: CMakeLists.txt  README.md
thread_pool/include/: common.h  task.h  thread_pool.h
thread_pool/src/: main.cpp
thread_pool/src/task/: task.cpp
